# Mephi_lab

./: .gitignore  CMakeLists.txt  Data.txt
Sources/: Test.c  Vector3d.c  main.c
include/: Vector3d.h
